--- a/INP_project/.project
+++ b/INP_project/.project
@@ -48,12 +48,12 @@
 		<link>
 			<name>src/main/webapp/html5up-spectral/LICENSE.txt</name>
 			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/Desktop/html5up-spectral/LICENSE.txt</locationURI>
+			<location>C:/Users/smhrd/Desktop/html5up-spectral/LICENSE.txt</location>
 		</link>
 		<link>
 			<name>src/main/webapp/html5up-spectral/README.txt</name>
 			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/Desktop/html5up-spectral/README.txt</locationURI>
+			<location>C:/Users/smhrd/Desktop/html5up-spectral/README.txt</location>
 		</link>
 		<link>
 			<name>src/main/webapp/html5up-spectral/assets</name>
